# yield-delta-frontend

./: .env.cloudflare  .env.example  .env.production  .env.production.example  .gitignore  AI_ENGINE_ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  Anchor.toml  BACKEND_SERVICES.md  Cargo.toml  FILES_CREATED.md  IMPLEMENTATION_CHECKLIST.md  MULTICHAIN_EXPANSION_ROADMAP.md  PHASE_2_COMPLETION_SUMMARY.md  PITCH_DECK_SCREENSHOT_PLAN.md  QUICK_START.md  SOLANA_AI_ENGINE_ARCHITECTURE.md  SOLANA_ANCHOR_PROGRAM.md  SOLANA_DEVNET_NEXT_STEPS.md  SOLANA_EXPANSION_SUMMARY.md  SOLANA_FRONTEND_WIRING.md  SOLANA_IMPLEMENTATION.md  SOLANA_README.md  SUI_AI_ENGINE_ARCHITECTURE.md  SUI_OVERFLOW_2026_SUBMISSION_CHECKLIST.md  jest.config.js  jest.setup.ts  package.json  skills-lock.json  tailwind.config.ts
.github/workflows/: frontend.yml
.opencode/skills/design-thinking/: SKILL.md
contracts/sui/yield_vaults/: Move.toml  Published.toml
contracts/sui/yield_vaults/sources/: delta_neutral_vault.move  hedge_ratio_vault.move  suiusde_meta_vault.move
contracts/sui/yield_vaults/tests/: delta_neutral_tests.move  (+2 more)
docs/: 3D_ORB_GUIDE.md  TURBOPACK_OPTIMIZATION_GUIDE.md
programs/adaptive_yield_vault/: Cargo.toml
programs/adaptive_yield_vault/src/: errors.rs  lib.rs  state.rs
programs/adaptive_yield_vault/src/instructions/: accrue_adaptive.rs  deposit.rs  initialize.rs  mod.rs  withdraw.rs
programs/adaptive_yield_vault/tests/: fuzz_adaptive.proptest-regressions  fuzz_adaptive.rs
programs/delta_neutral_vault/: Cargo.toml
programs/delta_neutral_vault/src/: errors.rs  lib.rs  state.rs
programs/delta_neutral_vault/src/instructions/: deposit.rs  initialize.rs  mod.rs  rebalance_hedge.rs  withdraw.rs
programs/lp_vault/: Cargo.toml
programs/lp_vault/src/: errors.rs  lib.rs  state.rs
programs/lp_vault/src/instructions/: deposit.rs  initialize.rs  mod.rs  simulate_compound.rs  withdraw.rs
programs/meta_vault/: Cargo.toml
programs/meta_vault/src/: errors.rs  lib.rs  state.rs
programs/meta_vault/src/instructions/: accrue_returns.rs  deposit.rs  initialize.rs  mod.rs  set_allocations.rs  withdraw.rs
programs/staking_vault/: Cargo.toml
programs/staking_vault/src/: errors.rs  lib.rs  state.rs
programs/staking_vault/src/instructions/: accrue_yield.rs  initialize.rs  mod.rs  stake.rs  unstake.rs
programs/yield_oracle/: Cargo.toml
programs/yield_oracle/src/: errors.rs  lib.rs  state.rs
programs/yield_oracle/src/instructions/: initialize_oracle.rs  mark_rebalanced.rs  mod.rs  post_signal.rs
programs/yield_vault/: Cargo.toml
programs/yield_vault/src/: errors.rs  lib.rs  state.rs
programs/yield_vault/src/instructions/: deposit.rs  initialize.rs  withdraw.rs
programs/yield_vault_core/: Cargo.toml
programs/yield_vault_core/fuzz/: Cargo.toml
programs/yield_vault_core/fuzz/fuzz_targets/: fuzz_math.rs  fuzz_stateful.rs
programs/yield_vault_core/src/: errors.rs  fees.rs  lib.rs  math.rs  seeds.rs  state.rs
programs/yield_vault_core/src/instructions/: admin.rs  deposit.rs  harvest_fees.rs  initialize.rs  mod.rs  withdraw.rs
programs/yield_vault_core/tests/: fuzz_math.rs  fuzz_stateful.rs
public/: manifest.json
scripts/: deploy-devnet.sh  generate_orb_model.py  initialize-devnet-vault.ts  verify-solana-integration.js
src/__tests__/integration/: deposit-withdrawal-flow.test.tsx  multichain-wallet.test.ts
src/app/: globals.css  layout.tsx
src/app/backtest/: page.module.css  page.tsx
src/app/charts/: DESIGN.md  page.module.css  page.tsx  terminal.module.css
src/app/dashboard/: page.module.css  page.tsx
src/app/docs/: page.module.css  page.tsx
src/app/logo-showcase/: page.tsx
src/app/market/: page.tsx
src/app/market-sentiment/: page.module.css  page.tsx
src/app/portfolio/: page.module.css  page.tsx
src/app/vault/: page.tsx
src/app/vaults/: page.tsx
src/components/: AIChat.module.css  AIChat.tsx  AIOrb3D.tsx  AnalyticsDashboard.tsx  ChainSelector.tsx  DepositModal.module.css  DepositModal.tsx  DocsSidebar.tsx  Logo.tsx  Logo3D.tsx  MultiChainWalletButton.tsx  Navigation.tsx  PortfolioChart.module.css  PortfolioChart.tsx  SolanaDepositModal.module.css  SolanaDepositModal.tsx  SolanaVaultCard.tsx  SolanaVaultList.tsx  SolanaWalletModal.tsx  SolanaWithdrawModal.tsx  SuiDepositModal.tsx  SuiWalletModal.tsx  SuiWalletSync.tsx
src/components/__tests__/: CustomerVaultDashboard.test.tsx  DepositModal.test.tsx
src/components/charts/: ControlSidebar.tsx  DrawingTools.tsx  EnhancedCandlestickChart.tsx  LiveTicker.tsx  MACDChart.tsx  PriceStatsGrid.tsx  RSIChart.tsx  TechnicalAnalysisPanel.tsx  TokenPairSelector.tsx
src/components/docs/: DocsBackButton.tsx
src/components/providers/: Web3Provider.tsx
src/components/sections/: FeatureHighlight.tsx  HeroSection.tsx  IntegrationCarousel.module.css  IntegrationCarousel.tsx  VaultShowcase.tsx
src/components/sentiment/: FearGreedGauge.tsx  MetricCard.tsx  RadarChart.tsx  SentimentBreakdown.tsx  SentimentFilters.tsx  SentimentScoreDisplay.tsx  SentimentTable.tsx  SentimentTimeline.tsx
src/components/ui/: dialog.tsx  dropdown-menu.tsx
src/hooks/: useBinanceWebSocket.ts  useEnhancedVaultDeposit.ts  useMockWebSocket.ts  useSolanaVault.ts  useSolanaWallet.ts  useSuiVault.ts  useSuiVaultTVL.ts  useSuiWallet.ts  useVaults.ts  useWebSocket.tsx
src/hooks/__tests__/: useSolanaWallet.test.ts  useSuiVaultTVL.test.ts
src/lib/: chainConfig.ts  chainUtils.ts  vaultCatalog.ts
src/lib/__tests__/: api-utils.test.ts
src/lib/solana/: anchorProvider.ts  pdas.ts  programIds.ts
src/lib/sui/: dapp-kit.ts  vaultBalance.ts  vaultPrograms.ts  walletErrors.ts
src/stores/: multiChainStore.ts  vaultStore.ts
src/styles/: charts.css  docs-redesign.css  vault.css
src/utils/: tokenUtils.ts
yield-delta-frontend/: .env.example
yield-delta-frontend/src/components/: MultiChainWalletButton.tsx  SolanaWalletModal.tsx
yield-delta-frontend/src/hooks/: useSolanaWallet.ts
yield-delta-frontend/src/lib/: chainUtils.ts
yield-delta-frontend/src/stores/: multiChainStore.ts
yield-delta-frontend/src/types/: chain.ts
(+23 files in other folders)
