[package]
name = "adaptive-yield-vault"
version = "0.1.0"
description = "Yield Delta — volatility-reactive adaptive yield vault (Experimental)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "adaptive_yield_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
yield-vault-core = { path = "../yield_vault_core" }
yield-oracle = { path = "../yield_oracle", features = ["no-entrypoint"] }
