[package]
name = "lp-vault"
version = "0.1.0"
description = "Yield Delta — LP auto-compounding vault with simulated fee compounding"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lp_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
yield-vault-core = { path = "../yield_vault_core" }
