[package]
name = "staking-vault"
version = "0.1.0"
description = "Yield Delta — SOL Liquid Staking Vault (Marinade CPI, mSOL yield, Strategy 2)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
