[package]
name = "staking-vault"
version = "0.1.0"
description = "Yield Delta — SOL liquid staking vault with simulated yield accrual"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
yield-vault-core = { path = "../yield_vault_core" }
