[package]
name = "yield-oracle"
version = "0.1.0"
description = "Yield Delta — AI Signal Oracle Program (keeper posts signals; vaults read before rebalancing)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "yield_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
