[package]
name = "yield-oracle"
version = "0.1.0"
description = "Yield Delta — admin-updatable on-chain price oracle for devnet"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "yield_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
yield-vault-core = { path = "../yield_vault_core" }
