[package]
name = "yield-vault"
version = "0.1.0"
description = "Yield Delta Vault Program — deposit/withdraw with share token accounting"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "yield_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
