[package]
name = "yield-vault-core"
version = "0.1.0"
description = "Yield Delta — Core Vault Base Program (ERC4626-style share accounting with fee accrual)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "yield_vault_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
